# mcp

./: .gitignore  README.md
Claude/: README.md  claude_desktop_config.json
VSCode/: README.md  mcp_configurations.json
VSCode/playwright/: Notes.txt  generate_playwright.txt  package-lock.json  package.json  playwright.config.ts
VSCode/playwright/tests/: yopmail.spec.ts
VSCode/selenium/: Notes.txt  build.gradle  generate_selenium.txt
VSCode/selenium/src/main/java/: Client.java
VSCode/selenium/src/test/java/: YopmailTest.java
mcp-server/: README.md
mcp-server/java/starter-stdio-server/: README.md  build.gradle  settings.gradle
mcp-server/java/starter-stdio-server/src/main/java/org/springframework/ai/mcp/sample/server/: Customer.java  CustomerService.java  McpServerApplication.java
mcp-server/java/starter-stdio-server/src/main/resources/: application.properties
mcp-server/java/starter-stdio-server/src/test/java/org/springframework/ai/mcp/sample/client/: ClientStdio.java
mcp-server/java/starter-webflux-server/: build.gradle  settings.gradle
mcp-server/python/: .env.example  MCP.postman_collection.json  README.md  api.py  mcp_client.py  mcp_orchestrator.py  mcp_server_http.py  pyproject.toml
